initial building commit without kernel

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -1,8 +1,8 @@
-monitor=DP-2,preferred,0x0,1
-monitor=DP-1,highrr,3840x0,1
+monitor=HDMI-A-2,1920x1080@165,0x0,1
+monitor=DP-4,1920x1080,1920x0,1
 monitor=,preferred,auto,1
 
-workspace=DP-2,1
+workspace=HDMI-A-2,1
 
 input {
     kb_file=
@@ -67,7 +67,7 @@ bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
 bind=SUPER_SHIFT,return,exec,foot
-bind=SUPER,Q,killactive,
+bind=SUPER_SHIFT,Q,killactive,
 bind=SUPER_SHIFT,backspace,exit,
 bind=SUPER,backspace,forcerendererreload
 bind=SUPER,space,togglefloating,
@@ -79,12 +79,12 @@ bind=SUPER_SHIFT,P,pseudo,
 bind=SUPER,F,fullscreen,1
 bind=SUPER_SHIFT,F,fullscreen,0
 
-bind=SUPER,W,focusmonitor,DP-2
-bind=SUPER,E,focusmonitor,DP-1
-bind=SUPER_SHIFT,W,movewindow,mon:DP-2
-bind=SUPER_SHIFT,E,movewindow,mon:DP-1
-bind=SUPER_ALT,W,movecurrentworkspacetomonitor,DP-2
-bind=SUPER_ALT,E,movecurrentworkspacetomonitor,DP-1
+bind=SUPER,W,focusmonitor,HDMI-A-2
+bind=SUPER,E,focusmonitor,DP-4
+bind=SUPER_SHIFT,W,movewindow,mon:HDMI-A-2
+bind=SUPER_SHIFT,E,movewindow,mon:DP-4
+bind=SUPER_ALT,W,movecurrentworkspacetomonitor,HDMI-A-2
+bind=SUPER_ALT,E,movecurrentworkspacetomonitor,DP-4
 
 bind=SUPER_ALT,H,resizeactive,-30 0
 bind=SUPER_ALT,J,resizeactive,0 30
