--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -18,7 +18,7 @@ input {
     follow_mouse=1
 
     touchpad {
-        natural_scroll=yes
+        natural_scroll=no
     }
 
     sensitivity=0 # -1.0 - 1.0, 0 means no modification.
