making nix happy

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 monitor=HDMI-A-2,1920x1080@165,0x0,1
 monitor=DP-4,1920x1080,1920x0,1
+monitor=DVI-I-1,1024x768,-1024x0,1
 monitor=,preferred,auto,1
 
 workspace=HDMI-A-2,1
@@ -79,6 +80,7 @@ bind=SUPER_SHIFT,P,pseudo,
 bind=SUPER,F,fullscreen,1
 bind=SUPER_SHIFT,F,fullscreen,0
 
+bind=SUPER,Q,focusmonitor,DVI-I-1
 bind=SUPER,W,focusmonitor,HDMI-A-2
 bind=SUPER,E,focusmonitor,DP-4
 bind=SUPER_SHIFT,W,movewindow,mon:HDMI-A-2
