--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -1,6 +1,6 @@
-monitor=HDMI-A-2,1920x1080@165,0x0,1
-monitor=DP-4,1920x1080,1920x0,1
-monitor=DVI-I-1,1024x768,-1024x0,1
+monitor=HDMI-A-2,1920x1080@165,1920x0,1
+monitor=DP-4,1920x1080,3840,1
+monitor=DVI-I-1,1024x768,0x0,1
 monitor=,preferred,auto,1
 
 workspace=HDMI-A-2,1
