--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -1,6 +1,6 @@
-monitor=HDMI-A-2,1920x1080@165,1920x0,1
-monitor=DP-4,1920x1080,3840,1
-monitor=DVI-I-1,1024x768,0x0,1
+monitor=DP-5,1024x768,0x0,1
+monitor=HDMI-A-2,1920x1080@165,1024x0,1
+monitor=DP-4,1920x1080,2944x0,1
 monitor=,preferred,auto,1
 
 workspace=HDMI-A-2,1
@@ -80,7 +80,7 @@ bind=SUPER_SHIFT,P,pseudo,
 bind=SUPER,F,fullscreen,1
 bind=SUPER_SHIFT,F,fullscreen,0
 
-bind=SUPER,Q,focusmonitor,DVI-I-1
+bind=SUPER,Q,focusmonitor,DP-5
 bind=SUPER,W,focusmonitor,HDMI-A-2
 bind=SUPER,E,focusmonitor,DP-4
 bind=SUPER_SHIFT,W,movewindow,mon:HDMI-A-2
