--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -1,6 +1,6 @@
-monitor=DP-5,1024x768,0x0,1
-monitor=HDMI-A-2,1920x1080@165,1024x0,1
-monitor=DP-4,1920x1080,2944x0,1
+monitor=DP-2,1024x768,0x0,1
+monitor=HDMI-A-1,1920x1080@165,1024x0,1
+monitor=DP-1,1920x1080,2944x0,1
 monitor=,preferred,auto,1
 
 workspace=HDMI-A-2,1
@@ -32,7 +32,7 @@ general {
     col.active_border=0xffc2bc21
     col.inactive_border=0x66333333
     apply_sens_to_raw=0
-    damage_tracking=full
+    #damage_tracking=full
 }
 
 decoration {
@@ -80,13 +80,15 @@ bind=SUPER_SHIFT,P,pseudo,
 bind=SUPER,F,fullscreen,1
 bind=SUPER_SHIFT,F,fullscreen,0
 
-bind=SUPER,Q,focusmonitor,DP-5
-bind=SUPER,W,focusmonitor,HDMI-A-2
-bind=SUPER,E,focusmonitor,DP-4
-bind=SUPER_SHIFT,W,movewindow,mon:HDMI-A-2
-bind=SUPER_SHIFT,E,movewindow,mon:DP-4
-bind=SUPER_ALT,W,movecurrentworkspacetomonitor,HDMI-A-2
-bind=SUPER_ALT,E,movecurrentworkspacetomonitor,DP-4
+bind=SUPER,W,focusmonitor,DP-2
+bind=SUPER,E,focusmonitor,HDMI-A-1
+bind=SUPER,R,focusmonitor,DP-1
+bind=SUPER_SHIFT,W,movewindow,mon:DP-2
+bind=SUPER_SHIFT,E,movewindow,mon:HDMI-A-1
+bind=SUPER_SHIFT,R,movewindow,mon:DP-1
+bind=SUPER_ALT,W,movecurrentworkspacetomonitor,DP-2
+bind=SUPER_ALT,E,movecurrentworkspacetomonitor,HDMI-A-1
+bind=SUPER_ALT,R,movecurrentworkspacetomonitor,DP-1
 
 bind=SUPER_ALT,H,resizeactive,-30 0
 bind=SUPER_ALT,J,resizeactive,0 30
