--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -37,10 +37,6 @@ general {
 
 decoration {
     rounding=0
-    blur=1
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1
-    blur_new_optimizations=1
 }
 
 animations {
@@ -157,4 +153,5 @@ bind=,xf86audiolowervolume,exec,pamixer -d 5
 bind=,xf86audiomute,exec,pamixer -t
 bind=,xf86audiomicmute,exec,pamixer --default-source -t
 
+exec-once=easyeffects --gapplication-service
 exec-once=waybar
