--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -153,6 +153,5 @@ bind=,xf86audiolowervolume,exec,pamixer -d 5
 bind=,xf86audiomute,exec,pamixer -t
 bind=,xf86audiomicmute,exec,pamixer --default-source -t
 
-exec-once=easyeffects --gapplication-service
-exec-once=waybar
+exec-once=systemctl --user start foot waybar emacs easyeffects
 
